# departed

./: Cargo.toml  LICENSE  README.md
core/: .gitignore  Cargo.toml
core/src/: named.rs
examples/: lenvec.rs  zip.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs  logic.rs  named.rs  proof.rs
