[package]
name = "departed_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
departed_core = { version = "0.1.0", path = "../core" }
syn = { version = "1.0.90", features = ["full", "extra-traits"] }
quote = "1.0.17"
proc-macro2 = "1.0.36"

